tests/snapshots/cli__check_fails_on_non_conventional_merge_when_flag_is_set.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
FAIL  <OID>  first line doesn't match `<type>[optional scope]: <description>`  Merge branch 'feature'

1/4 failed
---
stderr:
