tests/snapshots/cli__check_fails_on_revert_commits_without_flag.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
FAIL  <OID>  first line doesn't match `<type>[optional scope]: <description>`  Revert "feat: change"

1/3 failed
---
stderr:
