tests/snapshots/cli__check_range_checks_commits_from_low_to_high.snap
---
source: tests/cli.rs
assertion_line: 165
expression: sanitized
---
stdout:
FAIL  <OID>  first line doesn't match `<type>[optional scope]: <description>`  this is not conventional

1/1 failed
---
stderr:
