tests/snapshots/cli__check_unsupported_type_reports_full_subject.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
FAIL  <OID>  wrong type: wip, did you mean `ci`  wip: still deciding

1/1 failed
---
stderr:
